--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,55 @@ button:hover{
 .artist img{
     width:100%;
 }
+
+@media(max-width:500px){
+    nav{
+        width:45%;
+    }
+    a {	
+        font-size:1.8rem;	
+    }
+    nav span{
+        border-left:2px solid #626262;
+    
+    }
+    .title-container div{
+        width:100%;
+    }
+    .title-container hr{
+        width:100%;
+    }
+    h1{
+        font-size:4rem;
+        margin:0;
+    }
+    button{
+        border:1px solid #626262;
+        font-size: 1.4rem;
+        box-shadow: 1px 1.5px 1.5px #626262;
+    }
+    .artists-container{
+        display:inline;
+        justify-content: space-around;
+        
+    }
+    .artist{
+        margin-left: auto;
+        margin-right: auto;
+        margin-top:5%;
+        margin-bottom: auto;
+        font-size: 1rem;
+        width:69%;
+    }
+    .artist img{
+        width: 80%;
+        height: 10%;
+    }
+    .artist:nth-child(2) img{
+        margin-top: 15%;
+    }
+    .artist:nth-child(2) .bio {
+        margin-bottom: 20%;
+
+    }
+}
